billing-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: combined-deployment
  namespace: billing-system
  labels:
    app: combined-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: combined-app
  template:
    metadata:
      labels:
        app: combined-app
    spec:
      hostname: billingsystem
      containers:
      - name: billingsystem
        image: monarch.azurecr.io/motorvehicle-retail-app-billingsystem:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: static-data
          mountPath: /vol/web
        command: ["sh", "-c", "sh /scripts/migrate.sh && sh /scripts/entrypoint.sh"]
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
      - name: proxy-app
        image: monarch.azurecr.io/motorvehicle-retail-app-proxy
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: static-data
          mountPath: /vol/static
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "150m"
            memory: "128Mi"
      volumes:
      - name: static-data
        persistentVolumeClaim:
          claimName: static-data-pvc
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: combined-service
  namespace: billing-system
spec:
  selector:
    app: combined-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: billing-port
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: proxy-port
